--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,11 @@ erl_crash.dump
 *.ez
 
 # Ignore package tarball (built via "mix hex.build").
-adv_func-*.tar
+fun_park-*.tar
 
 # Temporary files, for example, from tests.
 /tmp/
+
+
+.idea/
+
